--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,35 +6,44 @@
     <div class="col-sm-8">
       <div class="card">
         <div class="card-body">
-
           <!-- Makes POST request to /register route -->
           <form action="/register" method="POST">
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
+              <input type="email" class="form-control" name="username" />
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
+              <input type="password" class="form-control" name="password" />
             </div>
             <button type="submit" class="btn btn-dark">Register</button>
           </form>
-
         </div>
       </div>
     </div>
 
-    <!-- <div class="col-sm-4">
+    <div class="col-sm-4">
       <div class="card social-block">
         <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
+          <a
+            class="btn btn-block btn-social btn-google"
+            href="/auth/google"
+            role="button"
+          >
             <i class="fab fa-google"></i>
             Sign Up with Google
           </a>
+          <a
+            class="btn btn-block btn-social btn-github"
+            href="/auth/github"
+            role="button"
+          >
+            <i class="fab fa-github"></i>
+            Sign Up with Github
+          </a>
         </div>
       </div>
-    </div> -->
-
+    </div>
   </div>
 </div>
 
